--- a/src/components/css/BottomNav.css
+++ b/src/components/css/BottomNav.css
@@ -1,3 +1,10 @@
 .container {
-    height: 100px;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    top: 92%;
+    border-top: 1px solid black;
 }
