--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -34,11 +34,11 @@
     border-width: medium;
 }
 
-.btn--back--outline {
+.btn--previous--solid {
     background-color: var(--previous);
     color: var(--red);
     border-radius: 50px;
-    border-color: green;
+    border-color: #61A0AF;;
     border-width: medium;
 }
 
@@ -52,10 +52,13 @@
 }
 
 .btn--medium {
-    padding: 10px 20px;
+    padding: 5px;
     font-size: 18px;
     height: 40px;
     width: 150px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5%;
 }
 
 .btn--small {
