adding villager images into the svg circles. Resizing and positioning the images for best fit. Creating villager buttons. Styling bottom nav and fixing positioning.

--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -12,3 +12,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.Villagers {
+    width: 93%;
+    display: block;
+    margin-left: 5%;
+    margin-right: auto;
+}
