--- a/src/components/css/BottomNav.css
+++ b/src/components/css/BottomNav.css
@@ -1,10 +1,12 @@
 .container {
     height: 50px;
     width: 100%;
+    height: 7%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    position: absolute;
-    top: 92%;
+    position: fixed;
+    top: 93%;
     border-top: 1px solid black;
+    background-color: white;
 }
