--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+
 .ClearButtons {
     display: flex;
     flex-direction: column;
@@ -13,9 +15,38 @@
     margin-right: auto;
 }
 
-.Villagers {
+/* .Villagers {
     width: 93%;
     display: block;
     margin-left: 5%;
     margin-right: auto;
+    margin-bottom: 3.5%;
+} */
+
+.Villagers{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
+
+.villagerOptions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+p {
+    max-width: 80px;
+    margin-top: 1%;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+
