--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+
 .circle {
     width: 15px;
     height: 15px;
