sorting villagers by name rather than species. Adjusting css because space between had the bottom villagers too spaced out.

--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -26,7 +26,7 @@
 .Villagers{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
     max-width: 95%;
     margin-left: auto;
     margin-right: auto;
