--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -27,11 +27,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 1%;
+    margin-bottom: 4%;
 }
 
 .villagerOptions {
@@ -47,6 +47,23 @@ p {
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
     font-size: 16px;
+}
+
+.vSearch {
+    border-radius: 50px;
+    border-width: thin;
+    border-color: #242038;
+    height: 7%;
+    width: 93%;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    margin-top: 2%;
+    margin-bottom: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-indent: 1%;
 }
 
 
