--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -10,9 +10,12 @@
     background-color: #C0F3E3;
     border-radius: 50px;
     width: 93%;
-    display: block;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 /* .Villagers {
@@ -41,7 +44,7 @@
     align-items: center;
 }
 
-p {
+.vNames {
     max-width: 80px;
     margin-top: 1%;
     font-family: 'Quicksand', sans-serif;
