--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
 html, body {
   height: 100%;
 }
@@ -19,6 +20,24 @@ h2 {
   font-weight: 500;
   margin-left: 3%;
   margin-top: 2.5%;
+}
+
+h3 {
+  font-family: Quicksand, sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+p {
+  font-family: Quicksand, sans-serif;
+}
+
+label {
+  font-family: Quicksand, sans-serif;
+}
+
+.allResults {
+  margin-bottom: 2%;
 }
 
 
