--- a/src/App.css
+++ b/src/App.css
@@ -40,38 +40,11 @@ label {
   margin-bottom: 2%;
 }
 
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 1242px) {
+  h2{
+    font-size: 18px;
   }
-} */
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-/* .App-link {
-  color: #61dafb;
-} */
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  h1{
+    font-size: 24px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+}
