--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -48,7 +48,7 @@
     padding: 10px 20px;
     font-size: 48px;
     height: 100px;
-    width: 500px;
+    width: 80%;
 }
 
 .btn--medium {
@@ -65,4 +65,12 @@
     font-size: 14px;
     height: 30px;
     width: 125px;
+}
+
+@media only screen and (max-width: 1242px) {
+    .btn--large {
+        font-size: 20px;
+        height:50px;
+        margin-left: 5%;
+    }
 }
