--- a/src/components/css/VillagerResults.css
+++ b/src/components/css/VillagerResults.css
@@ -1,5 +1,5 @@
 .resultContainer {
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 .resultCard {
@@ -7,7 +7,7 @@
     margin-right: 3%;
     display: flex;
     align-items: center;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
 }
 
 .vImage {
@@ -37,6 +37,13 @@
 .label {
     margin-left: 1.5%;
     font-size: 20px;
+}
+
+.divider {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border-width: 3;
 }
 
 @media only screen and (max-width: 1242px) {
