--- a/src/components/css/BottomNav.css
+++ b/src/components/css/BottomNav.css
@@ -1,12 +1,12 @@
 .container {
-    height: 50px;
+    /* height: 60px; */
     width: 100%;
-    height: 7%;
+    height: 6%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     position: fixed;
-    top: 93%;
+    top: 94%;
     border-top: 1px solid #61A0AF;
     background-color: white;
     z-index: 1;
