--- a/src/components/css/ChosenDisplay.css
+++ b/src/components/css/ChosenDisplay.css
@@ -76,7 +76,8 @@
 
 .v-section-container {
     padding-top: 5vh;
-    padding-bottom: 10vh;
+    padding-bottom: 15vh;
+    margin-bottom: 5vh;
     max-height: 45vh;
     overflow:scroll;
     overflow-x:hidden;
